syntax = "proto3";

package protos;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.forumRecommend";

import "Common.proto";
import "CommonRequest.proto";

message ForumRecommendRequestData {
  uint32 like_forum = 1;
  uint32 topic = 2;
  uint32 recommend = 3;
  CommonRequest common = 4;
  string visit_history = 5;
  int32 sort_type = 7;
}

message ForumRecommendRequest {
  ForumRecommendRequestData data = 1;
}

message LikeForum {
  int64 forum_id = 1;
  string forum_name = 2;
  string avatar = 3;
  int32 is_sign = 4;
  int32 level_id = 5;
  int32 is_liveforum = 6;
  uint32 is_brand_forum = 7;
  string content = 9;
  int32 is_top = 10;
  int32 sort_type = 11;
  ThemeColorInfo theme_color = 12;
  bool need_trans = 14;
  int32 is_private_forum = 15;
  int32 is_manager = 18;
  optional PrivateForumInfo private_forum_info = 19;
  int64 hot_thread_id = 20;
  repeated FrsTabInfo tab_info = 21;
}

message ForumRecommendResponseData {
  repeated LikeForum like_forum = 1;
  int32 is_login = 4;
  int32 sort_type = 18;
}

message ForumRecommendResponse {
  Error error = 1;
  ForumRecommendResponseData data = 2;
}